# django-boilerplate

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pegasus-config.yaml  pyproject.toml  requirements.txt  tsconfig.json  vercel.json  vite.config.ts
.claude/skills/fix-types/: SKILL.md
.claude/skills/pegasus-projects/: SKILL.md
.claude/skills/resolve-pegasus-conflicts/: SKILL.md
.claude/skills/upgrade-pegasus/: SKILL.md
.claude/skills/upgrade-python-deps/: SKILL.md
.github/workflows/: build_frontend.yml  tests.yml
api-client/: runtime.ts
apps/users/: adapter.py  views.py
apps/users/migrations/: 0002_alter_customuser_avatar.py
apps/users/tests/: test_profile.py
apps/web/: context_processors.py  urls.py  views.py
apps/web/templatetags/: meta_tags.py
apps/web/tests/: base.py  test_basic_views.py  test_logged_in_views.py
assets/javascript/: api.js  app.js  csrf.js  htmx.js  logout.js  site.js
assets/styles/: site-base.css  site-tailwind.css
project/: celery.py  settings.py  settings_production.py  urls.py  wsgi.py
scripts/: dev.sh
templates/: 400.html  403.html  403_csrf.html  404.html  429.html  500.html  error_base.html
templates/account/: account_inactive.html  email.html  email_change.html  email_confirm.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  signup.html  signup_closed.html  verification_sent.html
templates/account/components/: profile_form.html
templates/allauth/elements/: button.html  h1.html  h2.html  panel.html
templates/socialaccount/: authentication_error.html  connections.html  login.html  signup.html
templates/web/: app_home.html  base.html  terms.html
templates/web/app/: app_base.html
templates/web/components/: app_nav_menu_items.html  landing_section2.html  testimonials.html  top_nav.html
